--- a/translations/en.json
+++ b/translations/en.json
@@ -108,5 +108,8 @@
   "validationNoItemSelected": "Please select one of the available items.",
 
   "hivPositive": "HIV Positive", 
-  "hivNegative": "HIV Negative"
+  "hivNegative": "HIV Negative",
+ 
+  "createSuccessToastTitle": "HTS record created",
+  "createSuccessToastDescription": "A new HTS record was created"
 }
