Add C19 Lab and Assessment concepts, widget, i18

--- a/translations/en.json
+++ b/translations/en.json
@@ -111,5 +111,8 @@
   "filterItemsInMultiselect": "Search...",
   "covidCaseReports": "Covid Care Reports",
   "clinicalVisitEncounters": "clinical visit encounters",
-  "clinicalVisitTitle": "Clinical Visits"
+  "clinicalVisitTitle": "Clinical Visits",
+  "covidAssessments": "Covid Assessment",
+  "covidLabResults": "Lab Results"
+
 }
