--- a/translations/en.json
+++ b/translations/en.json
@@ -104,10 +104,10 @@
   
   "hivPositive": "HIV Positive",
   "hivNegative": "HIV Negative",
-  "createSuccessToastTitle": "HTS record created",
-  "createSuccessToastDescription": "A new HTS record was created",
-  "updateSuccessToastTitle": "HTS record updated",
-  "updateSuccessToastDescription": "The patient HTS record was updated",
+  "createdRecord": "Record created",
+  "createdRecordDescription": "A new encounter was created",
+  "updatedRecord": "Record updated",
+  "updatedRecordDescription": "The patient encounter was updated",
   "filterItemsInMultiselect": "Search...",
   "covidCaseReports": "Covid Care Reports",
   "clinicalVisitEncounters": "clinical visit encounters",
