Feature/ohri 271 covid patient chart (#424)
* Import from carbon-components-react, not carbon-components-react/lib. Clean up

* Align reporting cohorts UUIDs for working

* Removed unused import

* OHRI-273 Created Covid home screen draft page

* OHRI-273 Corrected list titles

* OHRI-257 add COVID assessment form

* OHRI-257 add covid assessment form to Registry

* OHRI-258 Add COVID lab test form

* OHRI-273 Fixed lint issues

* OHRI-273 Adjusted programme switcher titles

* OHRI-260 Add COVID Outcome tracking Form

* OHRI-260 Add Form Json to Registry

* OHRI-258 Add COVID lab test form

* OHRI-260 Add COVID Outcome tracking Form

* OHRI-260 Add Form Json to Registry

* OHRI-274 Form Render UX Improvements

* OHRI-263 Add COVID vaccination Form

* OHRI-263 Add form Json to Registry

* remove override

* OHRI-260 change outcome checkbox to radio

* Add Side Nav, include Covid pages

* Add C19 Assessment Encounter

* Add C19 Assessment Encounter, fix lint

* OHRI-273 Added logic for case assessment list

* Add Lab Results, fix form launcher

* Add Lab Results, fix form launcher, fix lint

* OHRI-258 change test type question to Radio

* Fix duplicates, remove console

* OHRI-260 edit patient outcome answers

* wip form render test ui

* OHRI-257 add encounter start date question

* OHRI-263 add missing concepts

* OHRI-263 added missing behaviours

* Refactor generic component to receive encounter Uuid, add C19 concepts

* OHRI 256 add constants, fix generic component, add encounter

* Add C19 Lab and Assessment concepts, widget, i18

* Add C19 Lab and Assessment concepts, widget, i18, remove unused code

* Update answers and form behaviour (#390)

* OHRI-257 Delete Date of assesssment question

* edit obsGroups behaviours

* Edit group id

* OHRI-257 remove 'other' validation as per spec

* OHRI-257 fix typescript error

* OHRI-263 add missing answers

* OHRI-257 add validation

--- a/translations/en.json
+++ b/translations/en.json
@@ -111,5 +111,12 @@
   "filterItemsInMultiselect": "Search...",
   "covidCaseReports": "Covid Care Reports",
   "clinicalVisitEncounters": "clinical visit encounters",
-  "clinicalVisitTitle": "Clinical Visits"
+  "clinicalVisitTitle": "Clinical Visits",
+  "covidAssessments": "Covid Assessment",
+  "covidLabResults": "Lab Results",
+
+  "covidOutcomeActive": "COVID: Active",
+  "covidOutcomeUnknown": "COVID: Unknown Status",
+  "covidOutcomeRecovered": "COVID: Recovered"
+
 }
