--- a/packages/esm-form-render-app/translations/en.json
+++ b/packages/esm-form-render-app/translations/en.json
@@ -1,122 +1,15 @@
 {
-  "actions": "Actions",
-  "edit": "Edit",
-  "remove": "Remove",
-  "viewDetails": "View details",
-  "sign": "Sign",
-  "cancel": "Cancel",
-  "save": "Save",
-  "add": "Add",
-  "ongoingWorkPrompt": "There is ongoing work, are you sure you want to close this tab?",
-  "searchResultsForTerm": "Results for {searchTerm}",
-  "numeroSign": "No.",
-  "drugName": "Drug Name",
-  "strength": "Strength",
-  "dosageForm": "DosageForm",
-  "frequency": "Frequency",
-  "dose": "Dose",
-  "emptyMedicationOrderBaskedSearchHint": "You can add items to your basket by searching for them in the search field above.",
-  "orderMedication": "Order Medication",
-  "startAndEndDate": "Start and end date",
-  "endDate": "End date",
-  "refills": "Refills",
-  "dosingInstructions": "Dosing instructions",
-  "details": "Details",
-  "medication": "Medication",
-  "totalRefills": "Total number of refills",
-  "substitutionsPermitted": "Substitutions permitted",
-  "lastUpdated": "Last updated",
-  "lastUpdatedBy": "Last updated by",
-  "lastUpdatedLocation": "Last updated location",
-  "none": "None",
-  "medicationsCurrent": "Medications - current",
-  "medicationsPast": "Medications - past",
-  "medicationOrder": "Medication Order",
-  "name": "Name",
-  "status": "Status",
-  "revise": "Revise",
-  "discontinue": "Discontinue",
-  "modify": "Modify", 
-  "noCurrentMedicationsDocumented": "No current medications are documented.",
-  "noPastMedicationsDocumented": "No past medications are documented.",
-
-  "medications": "Medications",
-  "activeMedications": "Active Medications",
-  "pastMedications": "Past Medications",
-  "orderBasket": "Order Basket",
-  "medicationDurationAndUnit": "for {duration} {durationUnit}",
-  "medicationUndefinedDuration": "Indefinite duration",
-  "endButtonTooltip": "End",
-  "reorderButtonTooltip": "Reorder",
-  "error": "Error",
-  "noActiveMedicationsAvailable": "No active medications are available. You can document new medications via the Order Basket.",
-
-  "close": "Close",
-  "searchFieldPlaceholder": "Search for an order (e.g. \"Aspirin\")",
-  "alreadyAddedToBasket": "Already Added to Basket",
-  "drugOrders": "Drug orders",
-  "searchTermsSuggestedFor": "Suggested for {suggestion}",
-  "searchResultsExactMatchesForTerm": "{count} exact match(es) for \"{searchTerm}\"",
-  "clearSearchResults": "Clear Results",
-  "directlyAddToBasket": "Immediately add to basket",
-  "newOrders": "{count} new order(s)",
-  "emptyMedicationOrderBasket": "Your basket is currently empty.",
-  "removeFromBasket": "Remove from basket",
-  "quantity": "Quantity", 
-  "orderActionNew": "New",
-  "orderActionRenewed": "Renew",
-  "orderActionRevised": "Modify",
-  "orderActionDiscontinue": "Discontinue",
-
-  "orderForm": "Order Form",
-  "dosageInstructions": "1. Dosage Instructions",
-  "prescriptionDuration": "2. Prescription Duration",
-  "dispensingInformation": "3. Dispensing Information",
-  "editDosageModalHeading": "Edit Dose",
-  "editDoseComboBoxPlaceholder": "Dose",
-  "editDoseComboBoxTitle": "Enter Dose",
-  "editFrequencyModalHeading": "Edit Frequency",
-  "editFrequencyComboBoxPlaceholder": "Frequency",
-  "editFrequencyComboBoxTitle": "Enter Frequency",
-  "editRouteModalHeading": "Edit Route",
-  "editRouteComboBoxPlaceholder": "Route",
-  "editRouteComboBoxTitle": "Enter Route",
-  "patientInstructions": "Patient Instructions",
-  "patientInstructionsPlaceholder": "Additional dosing instructions (e.g. \"Take after eating\")",
-  "prn": "P.R.N.",
-  "takeAsNeeded": "Take As Needed",
-  "prnReason": "P.R.N. Reason",
-  "prnReasonPlaceholder": "Reason to take medicine",
-  "startDate": "Start Date",
-  "duration": "Duration",
-  "durationUnit": "Duration Unit",
-  "durationUnitPlaceholder": "Duration Unit",
-  "quantityDispensed": "Quantity Dispensed", 
-  "pillsDispensed": "Pills dispensed",
-  "prescriptionRefills": "Prescription Refills",
-  "indication": "Indication",
-  "indicationPlaceholder": "e.g. \"Hypertension\"",
-  "freeTextDosage": "Free Text Dosage",
-  "noDurationHint": "An empty field indicates an indefinite duration.",
-
-  "validationFieldRequired": "Required.",
-  "validationNoItemSelected": "Please select one of the available items.",
-  
-  "hivPositive": "HIV Positive",
-  "hivNegative": "HIV Negative",
-  "createdRecord": "Record created",
-  "createdRecordDescription": "A new encounter was created",
-  "updatedRecord": "Record updated",
-  "updatedRecordDescription": "The patient encounter was updated",
-  "filterItemsInMultiselect": "Search...",
-  "covidCaseReports": "Covid Care Reports",
-  "clinicalVisitEncounters": "clinical visit encounters",
-  "clinicalVisitTitle": "Clinical Visits",
-  "covidAssessments": "Covid Assessment",
-  "covidLabResults": "Lab Results",
-
-  "covidOutcomeActive": "COVID: Active",
-  "covidOutcomeUnknown": "COVID: Unknown Status",
-  "covidOutcomeRecovered": "COVID: Recovered"
-
+  "finalSchema": "Final Schema",
+  "formIntent": "Form Intent",
+  "formRender": "Form Render",
+  "formRenderMenuLink": "Form Render",
+  "formRenderTestTitle": "Form Render Test",
+  "generatedForm": "Generated Form",
+  "jsonEditorThe": "JSON Editor Theme",
+  "jsonInput": "JSON Input",
+  "jsonSchemaHeader": "JSON Schema",
+  "jsonText": "Enter JSON Text",
+  "render": "Render",
+  "selectForm": "--Select Form Intent",
+  "submitForm": "Please submit the form"
 }
