--- a/packages/esm-hiv-app/translations/en.json
+++ b/packages/esm-hiv-app/translations/en.json
@@ -1,122 +1,169 @@
 {
+  "action": "Action",
   "actions": "Actions",
-  "edit": "Edit",
-  "remove": "Remove",
-  "viewDetails": "View details",
-  "sign": "Sign",
-  "cancel": "Cancel",
-  "save": "Save",
+  "activeClients": "Active Clients",
+  "activeVisits": "Active Visits",
   "add": "Add",
-  "ongoingWorkPrompt": "There is ongoing work, are you sure you want to close this tab?",
-  "searchResultsForTerm": "Results for {searchTerm}",
-  "numeroSign": "No.",
-  "drugName": "Drug Name",
-  "strength": "Strength",
-  "dosageForm": "DosageForm",
-  "frequency": "Frequency",
-  "dose": "Dose",
-  "emptyMedicationOrderBaskedSearchHint": "You can add items to your basket by searching for them in the search field above.",
-  "orderMedication": "Order Medication",
-  "startAndEndDate": "Start and end date",
-  "endDate": "End date",
-  "refills": "Refills",
-  "dosingInstructions": "Dosing instructions",
-  "details": "Details",
-  "medication": "Medication",
-  "totalRefills": "Total number of refills",
-  "substitutionsPermitted": "Substitutions permitted",
-  "lastUpdated": "Last updated",
-  "lastUpdatedBy": "Last updated by",
-  "lastUpdatedLocation": "Last updated location",
-  "none": "None",
-  "medicationsCurrent": "Medications - current",
-  "medicationsPast": "Medications - past",
-  "medicationOrder": "Medication Order",
-  "name": "Name",
-  "status": "Status",
-  "revise": "Revise",
-  "discontinue": "Discontinue",
-  "modify": "Modify", 
-  "noCurrentMedicationsDocumented": "No current medications are documented.",
-  "noPastMedicationsDocumented": "No past medications are documented.",
-
-  "medications": "Medications",
-  "activeMedications": "Active Medications",
-  "pastMedications": "Past Medications",
-  "orderBasket": "Order Basket",
-  "medicationDurationAndUnit": "for {duration} {durationUnit}",
-  "medicationUndefinedDuration": "Indefinite duration",
-  "endButtonTooltip": "End",
-  "reorderButtonTooltip": "Reorder",
-  "error": "Error",
-  "noActiveMedicationsAvailable": "No active medications are available. You can document new medications via the Order Basket.",
-
-  "close": "Close",
-  "searchFieldPlaceholder": "Search for an order (e.g. \"Aspirin\")",
-  "alreadyAddedToBasket": "Already Added to Basket",
-  "drugOrders": "Drug orders",
-  "searchTermsSuggestedFor": "Suggested for {suggestion}",
-  "searchResultsExactMatchesForTerm": "{count} exact match(es) for \"{searchTerm}\"",
-  "clearSearchResults": "Clear Results",
-  "directlyAddToBasket": "Immediately add to basket",
-  "newOrders": "{count} new order(s)",
-  "emptyMedicationOrderBasket": "Your basket is currently empty.",
-  "removeFromBasket": "Remove from basket",
-  "quantity": "Quantity", 
-  "orderActionNew": "New",
-  "orderActionRenewed": "Renew",
-  "orderActionRevised": "Modify",
-  "orderActionDiscontinue": "Discontinue",
-
-  "orderForm": "Order Form",
-  "dosageInstructions": "1. Dosage Instructions",
-  "prescriptionDuration": "2. Prescription Duration",
-  "dispensingInformation": "3. Dispensing Information",
-  "editDosageModalHeading": "Edit Dose",
-  "editDoseComboBoxPlaceholder": "Dose",
-  "editDoseComboBoxTitle": "Enter Dose",
-  "editFrequencyModalHeading": "Edit Frequency",
-  "editFrequencyComboBoxPlaceholder": "Frequency",
-  "editFrequencyComboBoxTitle": "Enter Frequency",
-  "editRouteModalHeading": "Edit Route",
-  "editRouteComboBoxPlaceholder": "Route",
-  "editRouteComboBoxTitle": "Enter Route",
-  "patientInstructions": "Patient Instructions",
-  "patientInstructionsPlaceholder": "Additional dosing instructions (e.g. \"Take after eating\")",
-  "prn": "P.R.N.",
-  "takeAsNeeded": "Take As Needed",
-  "prnReason": "P.R.N. Reason",
-  "prnReasonPlaceholder": "Reason to take medicine",
-  "startDate": "Start Date",
-  "duration": "Duration",
-  "durationUnit": "Duration Unit",
-  "durationUnitPlaceholder": "Duration Unit",
-  "quantityDispensed": "Quantity Dispensed", 
-  "pillsDispensed": "Pills dispensed",
-  "prescriptionRefills": "Prescription Refills",
-  "indication": "Indication",
-  "indicationPlaceholder": "e.g. \"Hypertension\"",
-  "freeTextDosage": "Free Text Dosage",
-  "noDurationHint": "An empty field indicates an indefinite duration.",
-
-  "validationFieldRequired": "Required.",
-  "validationNoItemSelected": "Please select one of the available items.",
-  
-  "hivPositive": "HIV Positive",
-  "hivNegative": "HIV Negative",
-  "createdRecord": "Record created",
-  "createdRecordDescription": "A new encounter was created",
-  "updatedRecord": "Record updated",
-  "updatedRecordDescription": "The patient encounter was updated",
-  "filterItemsInMultiselect": "Search...",
-  "covidCaseReports": "Covid Care Reports",
-  "clinicalVisitEncounters": "clinical visit encounters",
+  "adherenceCounselling": "Adherence Counselling",
+  "age": "Age",
+  "allCTClients": "All C&T Clients",
+  "appointmentDate": "Appointment Date",
+  "appointments": "Appointments",
+  "artCohort": "ART Cohort",
+  "artRestart": "Restart ART therapy",
+  "artStart": "Start ART",
+  "artStartDate": "ART Start Date",
+  "artStop": "Stop ART",
+  "artSubstitute": "Substitute ART Regimen",
+  "artSwitch": "Switch ART Regimen Line",
+  "artTherapy": "ART Therapy",
+  "cd4": "CD4",
+  "cd4Count": "CD4 Count",
+  "cd4LabResults": "CD4 Lab results",
+  "cd4ountPercentage": "CD4 %",
+  "cd4Results": "CD4 Results",
+  "characteristicsTitle": "Characteristics",
+  "clientDescription": "Client Description",
+  "clientId": "Client ID",
+  "clientLinkage": "client linkage",
+  "clients": "Clients",
+  "clientsLinkedToCare": "Clients linked to care in the last 14 days",
+  "clinicalVisit": "Clinical Visit",
+  "clinicalVisitDisplay": "Clinical visit encounters",
   "clinicalVisitTitle": "Clinical Visits",
-  "covidAssessments": "Covid Assessment",
-  "covidLabResults": "Lab Results",
-
-  "covidOutcomeActive": "COVID: Active",
-  "covidOutcomeUnknown": "COVID: Unknown Status",
-  "covidOutcomeRecovered": "COVID: Recovered"
-
+  "concentrationProblems": "Concentration Problems",
+  "contactDate": "Contact Date",
+  "contactMethod": "Contact Method",
+  "contactOutcome": "Contact Outcome",
+  "contactTracing": "Contact Tracing",
+  "currentRegimen": "Current Regimen",
+  "currentViralLoad": "Current Viral Load",
+  "currentVLReason": "Reason For Current VL",
+  "dateConfirmedPositive": "Date Confirmed HIV Positive",
+  "death": "Death",
+  "deathCause": "Cause of Death",
+  "deathDate": "Death Date",
+  "depressed": "Depressed",
+  "differentiatedCareService": "Differentiated Care Service",
+  "disclosure": "Disclosure",
+  "disclosureDate": "Disclosure Date",
+  "disclosureStage": "Disclosure Stage",
+  "drugOrders": "Drug Orders",
+  "drugsAndAlcoholUse": "Drugs and Alcohol Use",
+  "dsdModel": "DSD Model",
+  "dsdstatus": "Status",
+  "editForm": "Edit Form",
+  "EmotionalAbuse": "Emotional Abuse",
+  "enhancedAdherenceCounselling": "Enhanced Adherence Counselling",
+  "enrollDate": "Date of enrollment",
+  "enrollmentDate": "Enrollment/Re-enrollment Date",
+  "enrolmentDate": "Date of service enrollment",
+  "entryPoint": "Entry Point",
+  "ExpressEditForm": "Edit Form",
+  "ExpressRefferal": "Refferal Reason",
+  "ExpressTB": "TB Screening Outcome",
+  "ExpressViewDetails": "View Details",
+  "expressVisit": "Express Visit",
+  "ExpressVisitDate": "Visit Date",
+  "ExpressVisitType": "Visit Type",
+  "followUpVisit": "Start Follow Up Visit",
+  "highVl": "High VL",
+  "highVlResults": "Patients whose recent VL >1000 copies/ml (count)",
+  "hivBaseline": "HIV Baseline",
+  "hivDiagnosisDate": "HIV Diagnosis Date",
+  "hivEnrolment": "HIV Enrolment",
+  "hivMonitoring": "HIV Monitoring",
+  "hivStatus": "Status",
+  "hivTestDate": "Date of HIV Test",
+  "hivTestResult": "HIV Test result",
+  "htsProvider": "HTS Provider",
+  "htsStrategy": "HTS Strategy",
+  "initDate": "Date",
+  "intimatePartnerViolence": "Intimate Partner Violence",
+  "intimatePartnerViolenceDisplay": "Intimate Partner Violence",
+  "intimatePartnerViolenceTitle": "Intimate Partner Violence",
+  "labResults": "Viral Load",
+  "labTests": "Lab Tests",
+  "last14Days": "Last 14 days",
+  "lastAppointment": "Last Appointment",
+  "lastCD4Count": "Last CD4 Count",
+  "lastPositive": "Positive in last 14 days",
+  "lastVisitDetails": "Last Visit Details",
+  "linkedToCare": "Linked to care in last 14 days",
+  "littleInterest": "Disinterested in Things",
+  "location": "Location",
+  "medicationsHeader": "Medications",
+  "medicationsTitle": "Medications",
+  "mentalHealthAssessment": "Mental Health Assessment",
+  "mentalHealthAssessmentDisplay": "Mental Health Assessment",
+  "mentalHealthAssessmentTitle": "Mental Health Assessment",
+  "missedAppointments": "Missed appointments",
+  "missingCd4": "Missing CD4",
+  "name": "Name",
+  "nextAppointmentDate": "Next Appointment Date",
+  "noCd4Results": "Patients with no CD4 result (count)",
+  "noDrugsPickedLast90days": "No drugs picked, last 90 days",
+  "noVlResults": "Patients with no VL in the last 12 months (count)",
+  "ohriHealthClinic": "OHRI Health Clinic",
+  "oIs": "OIs",
+  "partnerNotification": "Partner Notification",
+  "patientName": "Patient Name",
+  "patientsInClinicPopulation": "Patients in clinic population",
+  "patientTracing": "Patient Tracing",
+  "patientType": "Patient Type at Enrollment",
+  "physicalAbuse": "Physical Abuse",
+  "poorAppetite": "Poor Appetite",
+  "populationCategory": "Population Category",
+  "populationType": "Population Type",
+  "positiveInLast14Days": "Clients who tested positive in the last 14 days",
+  "preExposureProphylaxisHeader": "Pre-exposure Prophylaxis (PrEP)",
+  "preExposureProphylaxisTitle": "Pre-exposure Prophylaxis",
+  "programStatus": "Program Status",
+  "reason": "Reason",
+  "reasonsForTesting": "Receiving Facility",
+  "recentCd4": "Recent CD4",
+  "recentCd4Date": "Recent CD4 Date",
+  "recentVL": "Recent VL",
+  "recentVLDate": "Recent VL Date",
+  "referenceRange": "Reference Range",
+  "regimen": "Regimen",
+  "regimenInitiated": "Regimen line",
+  "relationship": "Relationship",
+  "screeningDate": "Screening Date",
+  "serviceDeliveryModel": "Service Delivery Model",
+  "serviceEnrolment": "Service Enrolment",
+  "serviceExit": "Service Exit",
+  "sex": "Sex",
+  "sexualAbuse": "Sexual Abuse",
+  "specificDeathCause": "Specific cause of Death",
+  "startFollowUpVisit": "Start Follow Up Visit",
+  "startHIVTest": "Start HIV Test",
+  "startPostTestCounselling": "Start Post-test counselling",
+  "startPretest": "Start Pre-test",
+  "status": "Status",
+  "suspectedLTFU": "Suspected LTFU",
+  "tbScreening": "TB Screening",
+  "testName": "Test Name",
+  "testResultDate": "Test Result Date",
+  "therapyPlan": "Therapy Plan",
+  "todaysAppointments": "Today's Appointments",
+  "todaysClients": "Today's clients",
+  "tranferOutDate": "Transfer-Out Date",
+  "transferOut": "Transfer Out",
+  "value": "Value",
+  "verified": "Verified",
+  "viewDetails": "View details",
+  "viralLoad": "Viral Load",
+  "viralLoadCopies": "Viral Load Copies",
+  "viralLoadReason": "Reason for Viral Load",
+  "viralLoadResult": "Viral Load Result",
+  "viralLoadResults": "Viral Load Results",
+  "visitDate": "Visit Date",
+  "visitType": "Visit Type",
+  "vlDate": "Date",
+  "vlDue": "Due for VL",
+  "waitingForPostTest": "Waiting for post-test counselling",
+  "waitingForPretestCounselling": "Waiting for pre-test counselling",
+  "welcome": "Welcome back",
+  "wiatingForHivTest": "Waiting for HIV test"
 }
