--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -1,94 +1,46 @@
 {
   "actions": "Actions",
-  "edit": "Edit",
-  "remove": "Remove",
-  "viewDetails": "View details",
-  "sign": "Sign",
-  "cancel": "Cancel",
-  "save": "Save",
   "add": "Add",
-  "ongoingWorkPrompt": "There is ongoing work, are you sure you want to close this tab?",
-  "searchResultsForTerm": "Results for {searchTerm}",
-  "numeroSign": "No.",
-  "drugName": "Drug Name",
-  "strength": "Strength",
-  "dosageForm": "DosageForm",
-  "frequency": "Frequency",
-  "dose": "Dose",
-  "emptyMedicationOrderBaskedSearchHint": "You can add items to your basket by searching for them in the search field above.",
-  "orderMedication": "Order Medication",
-  "startAndEndDate": "Start and end date",
-  "endDate": "End date",
-  "refills": "Refills",
-  "dosingInstructions": "Dosing instructions",
-  "details": "Details",
-  "medication": "Medication",
-  "totalRefills": "Total number of refills",
-  "substitutionsPermitted": "Substitutions permitted",
-  "lastUpdated": "Last updated",
-  "lastUpdatedBy": "Last updated by",
-  "lastUpdatedLocation": "Last updated location",
-  "none": "None",
-  "medicationsCurrent": "Medications - current",
-  "medicationsPast": "Medications - past",
-  "medicationOrder": "Medication Order",
-  "name": "Name",
-  "status": "Status",
-  "revise": "Revise",
-  "discontinue": "Discontinue",
-  "modify": "Modify",
-  "noCurrentMedicationsDocumented": "No current medications are documented.",
-  "noPastMedicationsDocumented": "No past medications are documented.",
-
-  "medications": "Medications",
-  "activeMedications": "Active Medications",
-  "pastMedications": "Past Medications",
-  "orderBasket": "Order Basket",
-  "medicationDurationAndUnit": "for {duration} {durationUnit}",
-  "medicationUndefinedDuration": "Indefinite duration",
-  "endButtonTooltip": "End",
-  "reorderButtonTooltip": "Reorder",
-  "error": "Error",
-  "noActiveMedicationsAvailable": "No active medications are available. You can document new medications via the Order Basket.",
-
-  "close": "Close",
-  "searchFieldPlaceholder": "Search for an order (e.g. \"Aspirin\")",
-  "alreadyAddedToBasket": "Already Added to Basket",
-  "drugOrders": "Drug orders",
-  "searchTermsSuggestedFor": "Suggested for {suggestion}",
-  "searchResultsExactMatchesForTerm": "{count} exact match(es) for \"{searchTerm}\"",
-  "clearSearchResults": "Clear Results",
-  "directlyAddToBasket": "Immediately add to basket",
-  "newOrders": "{count} new order(s)",
-  "emptyMedicationOrderBasket": "Your basket is currently empty.",
-  "removeFromBasket": "Remove from basket",
-  "quantity": "Quantity",
-  "orderActionNew": "New",
-  "orderActionRenewed": "Renew",
-  "orderActionRevised": "Modify",
-  "orderActionDiscontinue": "Discontinue",
-  "orderForm": "Order Form",
-  "startDate": "Start Date",
-  "duration": "Duration",
-  "durationUnit": "Duration Unit",
-  "durationUnitPlaceholder": "Duration Unit",
-  "quantityDispensed": "Quantity Dispensed",
-  "pillsDispensed": "Pills dispensed",
-  "prescriptionRefills": "Prescription Refills",
-  "indication": "Indication",
-  "indicationPlaceholder": "e.g. \"Hypertension\"",
-  "freeTextDosage": "Free Text Dosage",
-  "noDurationHint": "An empty field indicates an indefinite duration.",
-
-  "validationFieldRequired": "Required.",
-  "validationNoItemSelected": "Please select one of the available items.",
-
-  "createdRecord": "Record created",
-  "createdRecordDescription": "A new encounter was created",
-  "updatedRecord": "Record updated",
-  "updatedRecordDescription": "The patient encounter was updated",
-  "filterItemsInMultiselect": "Search...",
-  "covidCaseReports": "Covid Care Reports",
-  "clinicalVisitEncounters": "clinical visit encounters",
-  "clinicalVisitTitle": "Clinical Visits"
+  "age": "Age",
+  "allClients": "All Clients",
+  "anc": "ANC",
+  "ancHivStatus": "ANC HIV status results",
+  "antenatal": "Antenatal",
+  "antenatalCare": "Antenatal Care",
+  "artInitiation": "ART Initiation",
+  "artNo": "ART Unique Number",
+  "arvLinkage": "ARV linkage (if positive)",
+  "birthCount": "Birth Count",
+  "bookedForANC": "Booked for ANC",
+  "children": "Children",
+  "currentAge": "Current Age",
+  "currentTrimester": "Current Trimester",
+  "delivery": "Delivery",
+  "deliveryDate": "Delivery Date",
+  "editForm": "Edit Form",
+  "facility": "Facility",
+  "familyLinkage": "Family Linkage",
+  "followUpDate": "Next follow-up date",
+  "hieOutcomes": "HIE Outcomes",
+  "hieVisits": "HIE Visits",
+  "hivExposedChildrenEnrolledInFollowUpCare": "# HIV Exposed children enrolled in follow up care",
+  "hivTestResults": "HIV Test Results",
+  "infantPostnatalCare": "Infant Postnatal Care",
+  "infantPostnatalVisit": "Infant Postnatal Visit",
+  "infantSummary": "Infant's Summary",
+  "labourAndDelivery": "Labour and Delivery",
+  "labourDelivery": "Labour & Delivery",
+  "labs": "Labs",
+  "maternalSummary": "Maternal Summary",
+  "mnchEnrollment": "MNCH Enrolment",
+  "patientName": "Patient Name",
+  "postnatal": "Postnatal",
+  "postnatalCare": "Postantal Care",
+  "pregnancyOutcome": "Pregnancy Outcome",
+  "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
+  "pTrackerId": "PTracker Id",
+  "sex": "Sex",
+  "totalDeliveries": "# Total deliveries",
+  "viewDetails": "View details",
+  "visitDate": "Visit Date"
 }
