OHRI-1140 card summary and expandable list component

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -7,18 +7,25 @@
   "ancHivStatus": "ANC HIV status results",
   "antenatal": "Antenatal",
   "antenatalCare": "Antenatal Care",
+  "ancVisitsAttended": "ANC visits attended",
   "artInitiation": "ART Initiation",
   "artNo": "ART Unique Number",
   "arvLinkage": "ARV linkage (if positive)",
+  "arvTherapy": "ARV Therapy",
+  "arvStartDate": "ARV Start Date",
+  "appointments": "Appointments",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
   "children": "Children",
   "currentAge": "Current Age",
   "currentTrimester": "Current Trimester",
+  "currentPregnancy": "Current Pregnancy",
+  "currentARVRegimen": "Current ARV Regimen",
   "delivery": "Delivery",
   "deliveryDate": "Delivery Date",
   "editForm": "Edit Form",
   "facility": "Facility",
+  "family": "Family",
   "familyLinkage": "Family Linkage",
   "followUpDate": "Next follow-up date",
   "hieOutcomes": "HIE Outcomes",
@@ -33,13 +40,20 @@
   "labs": "Labs",
   "maternalSummary": "Maternal Summary",
   "mnchEnrollment": "MNCH Enrolment",
+  "nextAppointmentDate": "Next Appointment Date",
   "patientName": "Patient Name",
   "postnatal": "Postnatal",
   "postnatalCare": "Postantal Care",
   "pregnancyOutcome": "Pregnancy Outcome",
   "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
+  "previousPregnancies": "Previous Pregnancies",
   "pTrackerId": "PTracker Id",
   "sex": "Sex",
+  "timeline": "Timeline",
+  "motherHIVStatus": "Mother HIV Status",
+  "motherStatus": "Mother Status",
+  "pregancyOutcome": "Pregnancy Outcome",
+  "expectedDeliveryDate": "Expected Delivery Date",
   "totalDeliveries": "# Total deliveries",
   "viewDetails": "View details",
   "visitDate": "Visit Date"
