ANC care list revised

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -53,5 +53,7 @@
   "timeline": "Timeline",
   "totalDeliveries": "# Total deliveries",
   "viewDetails": "View details",
-  "visitDate": "Visit Date"
+  "visitDate": "Visit Date",
+  "edd": "EDD",
+  "vlResults": "VL Results"
 }
