remove current age from Labour & Delivery list

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -10,12 +10,16 @@
   "antenatalCare": "Antenatal Care",
   "appointments": "Appointments",
   "artInitiation": "ART Initiation",
+  "ARTLinkageIfPositive": "ART Linkage If Positive",
   "artNo": "ART Unique Number",
+  "artProphylaxisStatus": "ART Prophylaxis Status",
   "arvLinkage": "ARV linkage (if positive)",
   "arvStartDate": "ARV Start Date",
   "arvTherapy": "ARV Therapy",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
+  "breastfeedingStatus": "Breastfeeding status",
+  "childDateOfBirth": "Child Date of Birth",
   "children": "Children",
   "currentAge": "Current Age",
   "currentARVRegimen": "Current ARV Regimen",
@@ -35,9 +39,14 @@
   "labourAndDelivery": "Labour and Delivery",
   "labourDelivery": "Labour & Delivery",
   "labs": "Labs",
+  "linkedToArt": "Linked to ART",
   "motherHIVStatus": "Mother HIV Status",
+  "MotherPostnatalage": "Age",
+  "mothersName": "Mothers Name",
   "motherStatus": "Mother Status",
   "nextAppointmentDate": "Next Appointment Date",
+  "nextVisitDate": "Next visit date",
+  "outcomeStatus": "Outcome Status",
   "patientName": "Patient Name",
   "postnatal": "Postnatal",
   "postnatalCare": "Postantal Care",
@@ -45,6 +54,8 @@
   "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
   "previousPregnancies": "Previous Pregnancies",
   "pTrackerId": "PTracker Id",
+  "recentViralLoadResults": "Recent Viral load results",
+  "recentViralLoadTestDate": "Recent Viral load test date",
   "sex": "Sex",
   "timeline": "Timeline",
   "totalDeliveries": "# Total deliveries",
