OHRI-1175 previous pregnancies

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -5,6 +5,7 @@
   "allClients": "All Clients",
   "anc": "ANC",
   "ancHivStatus": "ANC HIV status results",
+  "ancVisits": "ANC visits",
   "ancVisitsAttended": "ANC visits attended",
   "antenatal": "Antenatal",
   "antenatalCare": "Antenatal Care",
@@ -25,7 +26,7 @@
   "delivery": "Delivery",
   "deliveryDate": "Delivery Date",
   "edd": "EDD",
-  "editForm": "Edit Form",
+  "editForm": "Edit form",
   "expectedDeliveryDate": "Expected Delivery Date",
   "facility": "Facility",
   "family": "Family",
@@ -55,6 +56,7 @@
   "recentViralLoadResults": "Recent Viral load results",
   "recentViralLoadTestDate": "Recent Viral load test date",
   "sex": "Sex",
+  "statusAtBirth": "Status at birth",
   "timeline": "Timeline",
   "totalDeliveries": "# Total deliveries",
   "viewDetails": "View details",
