add logic for getting results from different encounter types

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -10,18 +10,18 @@
   "antenatalCare": "Antenatal Care",
   "appointments": "Appointments",
   "artInitiation": "ART Initiation",
+  "artLinkage": "ART linkage (if positive)",
   "ARTLinkageIfPositive": "ART Linkage If Positive",
   "artNo": "ART Unique Number",
   "artProphylaxisStatus": "ART Prophylaxis Status",
-  "arvLinkage": "ARV linkage (if positive)",
-  "arvStartDate": "ARV Start Date",
+  "artStartDate": "ART Start Date",
   "arvTherapy": "ARV Therapy",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
   "breastfeedingStatus": "Breastfeeding status",
   "childDateOfBirth": "Child Date of Birth",
   "children": "Children",
-  "currentARVRegimen": "Current ARV Regimen",
+  "currentARTRegimen": "Current ART Regimen",
   "currentPregnancy": "Current Pregnancy",
   "delivery": "Delivery",
   "deliveryDate": "Delivery Date",
