--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -15,13 +15,12 @@
   "artNo": "ART Unique Number",
   "artProphylaxisStatus": "ART Prophylaxis Status",
   "artStartDate": "ART Start Date",
-  "arvTherapy": "ARV Therapy",
+  "artTherapy": "ART Therapy",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
   "breastfeedingStatus": "Breastfeeding status",
   "childDateOfBirth": "Child Date of Birth",
   "children": "Children",
-  "currentARTRegimen": "Current ART Regimen",
   "currentPregnancy": "Current Pregnancy",
   "delivery": "Delivery",
   "deliveryDate": "Delivery Date",
