--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -12,7 +12,6 @@
   "appointments": "Appointments",
   "artInitiation": "ART Initiation",
   "artLinkage": "ART linkage (if positive)",
-  "ARTLinkageIfPositive": "ART Linkage If Positive",
   "artNo": "ART Unique Number",
   "artProphylaxisStatus": "ART Prophylaxis Status",
   "artStartDate": "ART Start Date",
@@ -22,7 +21,9 @@
   "breastfeedingStatus": "Breastfeeding status",
   "childDateOfBirth": "Child Date of Birth",
   "children": "Children",
+  "currentHivStatus": "Current HIV Status",
   "currentPregnancy": "Current Pregnancy",
+  "dateOfBirth": "Date of birth",
   "delivery": "Delivery",
   "deliveryDate": "Delivery Date",
   "edd": "EDD",
@@ -32,7 +33,9 @@
   "family": "Family",
   "followUpDate": "Next follow-up date",
   "hivExposedChildrenEnrolledInFollowUpCare": "# HIV Exposed children enrolled in follow up care",
+  "hivStatus": "HIV Status",
   "hivTestResults": "HIV Test Results",
+  "id": "ID",
   "infantPostnatalCare": "Infant Postnatal Care",
   "infantPostnatalVisit": "Infant Postnatal Visit",
   "labourAndDelivery": "Labour and Delivery",
@@ -43,6 +46,7 @@
   "MotherPostnatalage": "Age",
   "mothersName": "Mothers Name",
   "motherStatus": "Mother Status",
+  "name": "Name",
   "nextAppointmentDate": "Next Appointment Date",
   "nextVisitDate": "Next visit date",
   "outcomeStatus": "Outcome Status",
@@ -55,12 +59,12 @@
   "pTrackerId": "PTracker ID",
   "recentViralLoadResults": "Recent Viral load results",
   "recentViralLoadTestDate": "Recent Viral load test date",
+  "relationship": "Relationship",
   "sex": "Sex",
   "statusAtBirth": "Status at birth",
   "timeline": "Timeline",
   "totalDeliveries": "# Total deliveries",
   "viewDetails": "View details",
   "visitDate": "Visit Date",
-  "vlResults": "VL Results",
-  "currentHivStatus": "Current HIV Status"
+  "vlResults": "VL Results"
 }
