OHRI-1179 mch child summary

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -2,6 +2,7 @@
   "actions": "Actions",
   "add": "Add",
   "age": "Age",
+  "ageAtTimeOfTest": "Age at time of test",
   "allClients": "All Clients",
   "anc": "ANC",
   "ancHivStatus": "ANC HIV status results",
@@ -18,12 +19,14 @@
   "artTherapy": "ART Therapy",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
+  "breastfeeding": "Breastfeeding",
   "breastfeedingStatus": "Breastfeeding status",
   "childDateOfBirth": "Child Date of Birth",
   "children": "Children",
   "currentHivStatus": "Current HIV Status",
   "currentPregnancy": "Current Pregnancy",
-  "dateOfBirth": "Date of birth",
+  "date": "Date",
+  "dateOfBirth": "Date of Birth",
   "delivery": "Delivery",
   "deliveryDate": "Delivery Date",
   "edd": "EDD",
@@ -32,12 +35,16 @@
   "facility": "Facility",
   "family": "Family",
   "followUpDate": "Next follow-up date",
+  "finalOutcome": "Final Outcome",
   "hivExposedChildrenEnrolledInFollowUpCare": "# HIV Exposed children enrolled in follow up care",
+  "hivExposedInfant": "HIV Exposed infant",
+  "hivMonitoring": "HIV Monitoring",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Test Results",
   "id": "ID",
   "infantPostnatalCare": "Infant Postnatal Care",
   "infantPostnatalVisit": "Infant Postnatal Visit",
+  "infantSummary": "Infant's Summary",
   "labourAndDelivery": "Labour and Delivery",
   "labourDelivery": "Labour & Delivery",
   "labs": "Labs",
@@ -49,6 +56,7 @@
   "name": "Name",
   "nextAppointmentDate": "Next Appointment Date",
   "nextVisitDate": "Next visit date",
+  "onNevirapine": "On Nevirapine",
   "outcomeStatus": "Outcome Status",
   "patientName": "Patient Name",
   "postnatal": "Postnatal",
@@ -63,6 +71,7 @@
   "sex": "Sex",
   "statusAtBirth": "Status at birth",
   "timeline": "Timeline",
+  "testType": "Test Type",
   "totalDeliveries": "# Total deliveries",
   "viewDetails": "View details",
   "visitDate": "Visit Date",
