adds translations from lint

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -17,6 +17,7 @@
   "artProphylaxisStatus": "ART Prophylaxis Status",
   "artStartDate": "ART Start Date",
   "artTherapy": "ART Therapy",
+  "arvLinkage": "ARV linkage",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
   "breastfeeding": "Breastfeeding",
