--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -56,6 +56,7 @@
   "motherStatus": "Mother Status",
   "name": "Name",
   "nextAppointmentDate": "Next Appointment Date",
+  "nextFollowUpDate": "Next Follow-up date",
   "nextVisitDate": "Next visit date",
   "onNevirapine": "On Nevirapine",
   "outcomeStatus": "Outcome Status",
@@ -65,6 +66,7 @@
   "pregancyOutcome": "Pregnancy Outcome",
   "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
   "previousPregnancies": "Previous Pregnancies",
+  "previousVisits": "Previous Visits Infants",
   "pTrackerId": "PTracker ID",
   "recentViralLoadResults": "Recent Viral load results",
   "recentViralLoadTestDate": "Recent Viral load test date",
@@ -76,5 +78,6 @@
   "totalDeliveries": "# Total deliveries",
   "viewDetails": "View details",
   "visitDate": "Visit Date",
-  "vlResults": "VL Results"
+  "vlResults": "VL Results",
+  "previousVisitsSummary": "Visits"
 }
