OHRI-1226 fix hanging patient list widget

--- a/packages/esm-ohri-core-app/translations/en.json
+++ b/packages/esm-ohri-core-app/translations/en.json
@@ -6,7 +6,7 @@
   "lastVisit": "Last Visit",
   "myDashboards": "My Dashboards",
   "name": "Name",
-  "patientList": "patient list",
+  "patientList": "Patient List",
   "patientSuccessfullyAdded": "Patient successfully added.",
   "patientSuccessfullyRemoved": "Patient was successfully removed from all lists",
   "selectList": "Select the list where to add the client"
