PR Review Comments

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -51,7 +51,7 @@
   "labs": "Labs",
   "linkedToArt": "Linked to ART",
   "motherHIVStatus": "Mother HIV Status",
-  "mothersName": "Mothers Name",
+  "mothersName": "Mother's Name",
   "motherStatus": "Mother Status",
   "name": "Name",
   "nextAppointmentDate": "Next Appointment Date",
