fix translation id for date of birth

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -43,6 +43,7 @@
   "id": "ID",
   "infantPostnatalCare": "Infant Postnatal Care",
   "infantPostnatalVisit": "Infant Postnatal Visit",
+  "infantStatus": "Infant Status at Birth",
   "infantSummary": "Infant's Summary",
   "labourAndDelivery": "Labour and Delivery",
   "labourDelivery": "Labour & Delivery",
@@ -60,6 +61,7 @@
   "postnatal": "Postnatal",
   "postnatalCare": "Postnatal Care",
   "pregancyOutcome": "Pregnancy Outcome",
+  "pregnancyOutcome": "Pregnancy Outcome",
   "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
   "previousPregnancies": "Previous Pregnancies",
   "previousVisitsSummary": "Visits",
