rename current pregnancy recent pregnancy

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -23,7 +23,7 @@
   "breastfeedingStatus": "Breastfeeding status",
   "children": "Children",
   "currentHivStatus": "Current HIV Status",
-  "currentPregnancy": "Current Pregnancy",
+  "recentPregnancy": "Recent Pregnancy",
   "date": "Date",
   "dateOfBirth": "Date of Birth",
   "delivery": "Delivery",
