--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -10,12 +10,12 @@
   "antenatal": "Antenatal",
   "antenatalCare": "Antenatal Care",
   "appointments": "Appointments",
+  "art": "ART",
   "artInitiation": "ART Initiation",
   "artLinkage": "ART linkage (if positive)",
   "artNo": "ART Unique Number",
   "artProphylaxisStatus": "ART Prophylaxis Status",
   "artStartDate": "ART Start Date",
-  "artTherapy": "ART Therapy",
   "arvLinkage": "ARV linkage",
   "birthCount": "Birth Count",
   "bookedForANC": "Booked for ANC",
