OHRI-1348 HTS Patient Chart updated (#1479)
* OHRI-1348 HTS Patient Chart updated

* Define Table Schema, Add Tabs for HTS Services

* Refine table schema

* Refactoring on schema

* PR comments

* PR comments

* PR comments

* Add translations

--- a/packages/esm-hiv-app/translations/en.json
+++ b/packages/esm-hiv-app/translations/en.json
@@ -162,8 +162,11 @@
   "visitType": "Visit Type",
   "vlDate": "Date",
   "vlDue": "Due for VL",
-  "waitingForPostTest": "Waiting for post-test counselling",
   "waitingForPretestCounselling": "Waiting for pre-test counselling",
   "welcome": "Welcome back",
-  "wiatingForHivTest": "Waiting for HIV test"
+  "wiatingForHivTest": "Waiting for HIV test",
+  "setting": "Setting",
+  "approach": "Approach",
+  "eligibleForTesting":"Eliglble for Testing",
+  "encounterDate": "Encounter Date"
 }
