--- a/packages/esm-hiv-app/locales/fr/translation.json
+++ b/packages/esm-hiv-app/locales/fr/translation.json
@@ -32,8 +32,21 @@
   "artStartDate": "ART Start Date",
   "tbScreening": "TB Screening",
   "hivBaseline": "HIV Baseline",
-  "clinicalVisitDisplay": "clinical visit encounters",
-  "clinicalVisitTitle": "Clinical Visits",
+  "HtsPreTest": "Pre Test",
+  "HtsHivTesting": "HIV Testing",
+  "hivTestDate": "Date of HIV Test",
+  "location": "Location",
+  "hivTestResult": "HIV Test result",
+  "htsProvider": "HTS Provider",
+  "viewDetails": "View Details",
+  "editForm": "Edit Form",
+  "encounterDate": "Encounter Date",
+  "setting": "Setting",
+  "approach": "Approach",
+  "populationType": "Population Type",
+  "eligibleForTesting": "Eliglble for Testing",
+  "htsPreTest": "Pre Test",
+  "add": "Add",
   "activeClients": "Active Clients",
   "patientsInClinicPopulation": "Patients in clinic population",
   "missedAppointments": "Missed appointments",
@@ -55,18 +68,11 @@
   "cd4Results": "CD4 Results",
   "recentVL": "Recent VL",
   "recentVLDate": "Recent VL Date",
-  "add": "Add",
   "clientLinkage": "client linkage",
-  "hivTestDate": "Date of HIV Test",
-  "htsStrategy": "HTS Strategy",
-  "location": "Location",
-  "hivTestResult": "HIV Test result",
-  "htsProvider": "HTS Provider",
   "waitingForPretestCounselling": "Waiting for pre-test counselling",
   "wiatingForHivTest": "Waiting for HIV test",
   "startPretest": "Start Pre-test",
   "startHIVTest": "Start HIV Test",
-  "startPostTestCounselling": "Start Post-test counselling",
   "todaysClients": "Today's clients",
   "activeVisits": "Active Visits",
   "lastPositive": "Positive in last 14 days",
@@ -79,11 +85,11 @@
   "ohriHealthClinic": "OHRI Health Clinic",
   "allCTClients": "All C&T Clients",
   "startFollowUpVisit": "Start Follow Up Visit",
+  "clientId": "Client ID",
   "lastAppointment": "Last Appointment",
   "appointmentDate": "Appointment Date",
   "todaysAppointments": "Today's Appointments",
   "followUpVisit": "Start Follow Up Visit",
-  "clientId": "Client ID",
   "cd4": "CD4",
   "testResultDate": "Test Result Date",
   "cd4Count": "CD4 Count",
@@ -124,8 +130,6 @@
   "therapyPlan": "Therapy Plan",
   "regimenInitiated": "Regimen line",
   "reason": "Reason",
-  "viewDetails": "View Details",
-  "editForm": "Edit Form",
   "deathDate": "Death Date",
   "deathCause": "Cause of Death",
   "specificDeathCause": "Specific cause of Death",
@@ -140,7 +144,6 @@
   "tranferOutDate": "Transfer-Out Date",
   "verified": "Verified",
   "enrolmentDate": "Date of service enrollment",
-  "populationType": "Population Type",
   "serviceEnrolment": "Service Enrolment",
   "serviceExit": "Service Exit",
   "enrollDate": "Date of enrollment",
@@ -158,11 +161,8 @@
   "oIs": "OIs",
   "programStatus": "Program Status",
   "clinicalVisit": "Clinical Visit",
-  "ExpressVisitDate": "Visit Date",
-  "ExpressVisitType": "Visit Type",
-  "ExpressTB": "TB Screening Outcome",
-  "ExpressRefferal": "Refferal Reason",
-  "ExpressViewDetails": "View Details",
-  "ExpressEditForm": "Edit Form",
+  "tbScreeningOutcome": "TB Screening Outcome",
+  "appointmentReason": "Appointment Reason",
+  "refferalReason": "Refferal Reason",
   "expressVisit": "Express Visit"
 }
