Add to list renamed to Start HTS Session

--- a/packages/esm-commons-lib/translations/en.json
+++ b/packages/esm-commons-lib/translations/en.json
@@ -2,9 +2,9 @@
   "activeLoadingIndicator": "Active loading indicator",
   "activeVisit": "Active Visit",
   "add": "Add",
-  "addList": "Add to list",
+  "addList": "Start HTS Session",
   "addPatientToListOption": "Add Patient to list",
-  "addToListModal": "Add to list",
+  "addToListModal": "Start HTS Session",
   "age": "Age",
   "covidOutcomeUnknown": "COVID: Unknown Status",
   "editEncounter": "Edit",
