OHRI-1463: Add to list renamed to Start HTS Session (#1515)
* Add to list renamed to Start HTS Session

* Updated- Add to list renamed to Start HTS Session

--- a/packages/esm-commons-lib/translations/en.json
+++ b/packages/esm-commons-lib/translations/en.json
@@ -22,5 +22,6 @@
   "patientList": "patient list",
   "record": "Record",
   "searchClientList": "Search client list",
+  "startHTSSession": "Start HTS Session",
   "viewEncounter": "View"
 }
