The Mother's PTracker ID should be displayed in the family section and the column name updated to be PTracker ID

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -35,7 +35,7 @@
   "finalOutcome": "Final Outcome",
   "followUpDate": "Next follow-up date",
   "hivExposedChildrenEnrolledInFollowUpCare": "# HIV Exposed children enrolled in follow up care",
-  "hivExposedInfant": "HIV Exposed infant",
+  "hivExposedInfant": "HIV Exposed Infant",
   "hivMonitoring": "HIV Monitoring",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Test Results",
