--- a/packages/esm-cervical-cancer-app/translations/en.json
+++ b/packages/esm-cervical-cancer-app/translations/en.json
@@ -1,10 +1,10 @@
 {
   "actions": "Actions",
   "cacxAppointments": "CaCx Appointments",
-  "cacxRegistration": "Cacx Registration",
+  "cacxRegistration": "CaCx Registration",
   "cacxScreening": "CaCx Screening",
   "cacxSummary": "CaCx Summary",
-  "cacxTreatment": "Cacx Treatment",
+  "cacxTreatment": "CaCx Treatment",
   "colopsyResult": "Screening Results",
   "editForm": "Edit Form",
   "eligibleforScreening": "Eligible for CaCx Screening",
