OHRI-1771 Waiting for Post-Test counselling in the programme perspective for HTS

--- a/packages/esm-hiv-app/translations/en.json
+++ b/packages/esm-hiv-app/translations/en.json
@@ -162,6 +162,7 @@
   "waitingForPretestCounselling": "Waiting for pre-test counselling",
   "welcome": "Welcome back",
   "wiatingForHivTest": "Waiting for HIV test",
+  "WaitingForPosttestCounselling": "Waiting for post-test counselling",
   "setting": "Setting",
   "approach": "Approach",
   "eligibleForTesting":"Eliglble for Testing",
