The section named "Pregnancy outcome" on Mother MNCH summary renamed to "pregnancy status @birth" and column for "Breastfeeding status" OHRI-1750

--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -59,7 +59,7 @@
   "postnatal": "Postnatal",
   "postnatalCare": "Postnatal Care",
   "pregancyOutcome": "Pregnancy Outcome",
-  "pregnancyOutcome": "Pregnancy Outcome",
+  "pregnancyStatus": "Pregnancy Status",
   "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
   "previousPregnancies": "Previous Pregnancies",
   "previousVisitsSummary": "Visits",
