--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -59,7 +59,7 @@
   "postnatal": "Postnatal",
   "postnatalCare": "Postnatal Care",
   "pregancyOutcome": "Pregnancy Outcome",
-  "pregnancyStatusAtBirth": "Pregnancy Status At Birth",
+  "infantStatusAtBirth": "Infant Status At Birth",
   "pregnantWomenAttendingFirstANC": "# Pregnant women attending first ANC",
   "previousPregnancies": "Previous Pregnancies",
   "previousVisitsSummary": "Visits",
