OHRI-1994 Add TB Program menu and tabs shell on the patient chart

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -1,3 +1,10 @@
 {
-  "tuberclosis": "Tuberclosis"
+  "tuberclosis": "Tuberclosis",
+  "MdrTbEnrolment": "TB/MDR TB Enrolment",
+  "PatientTracing": "Patient Tracing",
+  "TbTreatmentFollowUp": "TB Follow Up",
+  "TbContactListing": "TB Contact Listing",
+  "recentTuberculosis": "Recent Tuberclosis",
+  "previousCases": "Previous Case",
+  "visits": "Visits"
 }
