Minor TB Changes

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -2,9 +2,9 @@
   "tuberclosis": "Tuberclosis",
   "MdrTbEnrolment": "TB/MDR TB Enrolment",
   "PatientTracing": "Patient Tracing",
-  "TbTreatmentFollowUp": "TB Follow Up",
+  "TbTreatmentFollowUp": "TB Follow-up",
   "TbContactListing": "TB Contact Listing",
-  "recentTuberculosis": "Recent Tuberclosis",
+  "recentTuberculosis": "Recent Tuberculosis",
   "previousCases": "Previous Case",
   "visits": "Visits"
 }
