Minor TB Typo Changes

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -5,6 +5,6 @@
   "TbTreatmentFollowUp": "TB Follow-up",
   "TbContactListing": "TB Contact Listing",
   "recentTuberculosis": "Recent Tuberculosis",
-  "previousCases": "Previous Case",
+  "previousCases": "Previous Cases",
   "visits": "Visits"
 }
