OHRI-1999 Add Elicited Contacts table under the TB Contact Listing menu

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -6,5 +6,10 @@
   "TbContactListing": "TB Contact Listing",
   "recentTuberculosis": "Recent Tuberculosis",
   "previousCases": "Previous Cases",
-  "visits": "Visits"
+  "visits": "Visits",
+  "nameOfContact": "Name of Contact",
+  "relationshipToIndex": "Relationship to Index",
+  "phoneNumber": "Phone Number",
+  "facility": "Facility",
+  "address": "Address"
 }
