OHRI-1999 Elicited Contacts table under the TB Contact Listing menu

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -11,6 +11,10 @@
   "activeDrCases": "Active DR Cases",
   "activeDsCases": "Active DS Cases",
   "drugResistant": "Cases with drug resistant TB",
-  "drugSensitive": "Cases with drug sesnsitive TB"
-  
+  "drugSensitive": "Cases with drug sesnsitive TB",
+  "nameOfContact": "Name of Contact",
+  "relationshipToIndex": "Relationship to Index",
+  "phoneNumber": "Phone Number",
+  "facility": "Facility",
+  "address": "Address"
 }
