OHRI-1999 Elicited Contacts table under the TB Contact Listing menu

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -11,6 +11,7 @@
   "activeDrCases": "Active DR Cases",
   "activeDsCases": "Active DS Cases",
   "drugResistant": "Cases with drug resistant TB",
-  "drugSensitive": "Cases with drug sesnsitive TB"
+  "drugSensitive": "Cases with drug sesnsitive TB",
+  "location": "Location"
   
 }
