--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -12,6 +12,7 @@
   "activeDsCases": "Active DS Cases",
   "drugResistant": "Cases with drug resistant TB",
   "drugSensitive": "Cases with drug sesnsitive TB",
-  "location": "Location"
+  "location": "Location",
+  "dateContactListed": "Date Contact Listed"
   
 }
