--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -12,17 +12,12 @@
   "activeDsCases": "Active DS Cases",
   "drugResistant": "Cases with drug resistant TB",
   "drugSensitive": "Cases with drug sesnsitive TB",
-<<<<<<< HEAD
   "editAssessmentForm": "Edit TB case assessment form",
   "caseId": "Case ID",
   "drugSensitivity": "Drug Sensitivity",
   "typeTB": "Type of TB",
   "appointmentDate": "Appointment Date",
-  "outcome": "Outcome"
-  }
-=======
+  "outcome": "Outcome",
   "location": "Location",
-  "dateContactListed": "Date Contact Listed"
-  
+  "dateContactListed": "Date Contact Listed"  
 }
->>>>>>> ed748fd69cbfb20fc9d84441ceed64b484967b90
